fix incorrect table text colour in dark mode

--- a/extension/css/themes/generic.css
+++ b/extension/css/themes/generic.css
@@ -177,3 +177,7 @@ span[data-assessment-status-text],
 #fc-dom-1 {
     color: var(--dark-text);
 }
+
+.content table td {
+    color: var(--dark-text);
+}
